Fixed div overlaping for instructor box

--- a/app/teachingCall/css/teaching-call-status.css
+++ b/app/teachingCall/css/teaching-call-status.css
@@ -75,7 +75,7 @@
 	border: 1px solid #ccc !important;
 	border-radius: 5px;
 	max-height: 75%;
-	min-height: 65%;
+	min-height: 50%;
 }
 
 .instructor-tag {
